--- a/gapso/build.gradle
+++ b/gapso/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
